# polyresolver

./: .gitignore  Cargo.toml  LICENSE  README.md
example-config-dir/: foo.yaml  home.yaml  root.yaml
src/: catalog.rs  config.rs  forwarder.rs  lib.rs  listener.rs  resolver.rs
testdata/configs/invalid/: bad_yaml.yaml  invalid_keys.yaml
testdata/configs/valid/: one.yaml
