[package]
name = "polyresolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver = "*"
trust-dns-server = { version = "*", features = [ "dns-over-openssl" ] }
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-log = "*"
tracing-subscriber = "*"
openssl = "*"
anyhow = "*"
async-trait = "*"
serde_yaml = "*"
serde = "*"
notify = "*"

[lib]
